se arregla formulario de contacto con smtp a gmail

--- a/test/swansea/about.html
+++ b/test/swansea/about.html
@@ -153,7 +153,7 @@
                         <div class="col-md-6 col-lg-3">
                             <div class="icon btn btn-block btn-lg btn-soft-red disabled mb-5"> <i class="uil uil-shield-exclamation"></i> </div>
                             <h4>Visión</h4>
-                            <p class="mb-3">Ser una organización Líder y mantenernos como referente en el país en la provisión de servicios de agenciamiento marítimo</p>
+                            <p class="mb-3">Ser una organización líder y mantenernos como referente en el país en la provisión de servicios de agenciamiento marítimo.</p>
                         </div>
                         <!--/column -->
                         <div class="col-md-6 col-lg-3">
