--- a/test/swansea/contact.html
+++ b/test/swansea/contact.html
@@ -212,7 +212,7 @@
                                         <select class="form-select" id="form-select" name="department" required>
                       <option selected disabled value="">Selecciona el departamento al que quieres hacerle tu consulta</option>
                       <option value="Sales">Ventas</option>
-                      <option value="Marketing">Marketing</option>
+                      <option value="Marketing">Operaciones</option>
                       <option value="Customer Support">Customer Service</option>
                     </select>
                                         <div class="valid-feedback"> ok! </div>
@@ -230,7 +230,7 @@
                                 </div>
                                 <!-- /column -->
                                 <div class="col-12 text-center">
-                                    <input type="submit" class="btn btn-primary rounded-pill btn-send mb-3" value="Send message">
+                                    <input type="submit" class="btn btn-primary rounded-pill btn-send mb-3" value="Enviar">
                                     <p class="text-muted"><strong>*</strong> Estos campos son requeridos.</p>
                                 </div>
                                 <!-- /column -->
