--- a/test/swansea/services.html
+++ b/test/swansea/services.html
@@ -179,7 +179,9 @@
                                     </div>
                                     <div>
                                         <h4 class="mb-1">AGENTE PORTUARIO / HUSBANDING</h4>
-                                        <p class="mb-0">En todos los puertos paraguayos, proveemos servicios para todo tipo de buques: containeros, graneleros, tanqueros, LNG’s, barcazas. contamos con personal operativo altamente capacitado.</p>
+                                        <p class="mb-0">Yang Ming ofrece un servicio de transporte de contenedores programado de primer nivel entre Paraguay y Asia, conectando vía fluvial con el puerto de Montevideo, Uruguay. Le brindamos a nuestros clientes servicios
+                                            puntuales, rápidos, confiables y económicos de alta calidad. Operamos con las principales terminales ubicadas en regiones clave de Paraguay. Garantizamos el transporte seguro y eficiente de su carga en contenedores.
+                                            Contamos con el equipo y los conocimientos necesarios para transportar de forma segura su mercadería.</p>
                                     </div>
                                 </div>
                             </div>
@@ -216,30 +218,7 @@
                     <!--/column -->
                 </div>
                 <!--/.row -->
-                <h2 class="display-4 mb-3">¿CÓMO LO HACEMOS?</h2>
-                <p class="lead fs-lg mb-8">We make your spending <span class="underline">stress-free</span> for you to have the perfect control.</p>
-                <div class="row gx-lg-8 gx-xl-12 gy-6 process-wrapper line">
-                    <div class="col-md-6 col-lg-3"> <span class="icon btn btn-circle btn-lg btn-soft-primary disabled mb-4"><span class="number">01</span></span>
-                        <h4 class="mb-1">Concept</h4>
-                        <p>Nulla vitae elit libero elit non porta gravida eget metus cras. Aenean eu leo quam. Pellentesque ornare.</p>
-                    </div>
-                    <!--/column -->
-                    <div class="col-md-6 col-lg-3"> <span class="icon btn btn-circle btn-lg btn-primary disabled mb-4"><span class="number">02</span></span>
-                        <h4 class="mb-1">Prepare</h4>
-                        <p>Vestibulum id ligula porta felis euismod semper. Sed posuere consectetur est at lobortis.</p>
-                    </div>
-                    <!--/column -->
-                    <div class="col-md-6 col-lg-3"> <span class="icon btn btn-circle btn-lg btn-soft-primary disabled mb-4"><span class="number">03</span></span>
-                        <h4 class="mb-1">Retouch</h4>
-                        <p>Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Nulla vitae elit libero.</p>
-                    </div>
-                    <!--/column -->
-                    <div class="col-md-6 col-lg-3"> <span class="icon btn btn-circle btn-lg btn-soft-primary disabled mb-4"><span class="number">04</span></span>
-                        <h4 class="mb-1">Finalize</h4>
-                        <p>Integer posuere erat, consectetur adipiscing elit. Fusce dapibus, tellus ac cursus commodo.</p>
-                    </div>
-                    <!--/column -->
-                </div>
+
                 <!--/.row -->
             </div>
             <!-- /.container -->
