--- a/test/swansea/links.html
+++ b/test/swansea/links.html
@@ -84,6 +84,12 @@
 
                             </li>
 
+                            <li class="nav-item d-none d-md-block">
+                                <a href="https://www.repremar.com">
+                                    <img src="./assets/img/RGroup2.png" alt="Repremar Group Web" />
+                                </a>
+                            </li>
+
                             <li class="nav-item d-lg-none">
                                 <button class="hamburger offcanvas-nav-btn"><span></span></button>
                             </li>
