se saca formulario de contacto y se agrega info en index

--- a/test/swansea/index.html
+++ b/test/swansea/index.html
@@ -302,7 +302,9 @@
                                         <!--/.card-header -->
                                         <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
                                             <div class="card-body">
-                                                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel.</p>
+                                                <p>Nuestros clientes son el pilar fundamental para cumplir nuestros objetivos. Trabajamos junto a ellos generando una relación a largo plazo, con el objetivo de cultivar la confianza y seguridad en nuestro
+                                                    servicio.
+                                                </p>
                                             </div>
                                             <!--/.card-body -->
                                         </div>
@@ -316,7 +318,7 @@
                                         <!--/.card-header -->
                                         <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
                                             <div class="card-body">
-                                                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel.</p>
+                                                <p>El transporte es una pieza clave para cualquier negocio. Por esta razón, en Swansea hacemos énfasis en el óptimo desarrollo de nuestra actividad, brindándoles a nuestros clientes un servicio 100% profesional.</p>
                                             </div>
                                             <!--/.card-body -->
                                         </div>
@@ -330,7 +332,7 @@
                                         <!--/.card-header -->
                                         <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
                                             <div class="card-body">
-                                                <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Cras mattis consectetur purus sit amet fermentum. Praesent commodo cursus magna, vel.</p>
+                                                <p>Tenemos un equipo altamente calificado, enfocado en gestionar cada etapa del servicio de manera eficiente, garantizándole a nuestros clientes practicidad y rapidez en nuestros servicios.</p>
                                             </div>
                                             <!--/.card-body -->
                                         </div>
