--- a/test/swansea/contact.html
+++ b/test/swansea/contact.html
@@ -173,7 +173,7 @@
                     </div>
                     <!-- /column -->
                 </div>
-                <!-- /.row -->
+                <!-- /.row 
                 <div class="row">
                     <div class="col-lg-10 offset-lg-1 col-xl-8 offset-xl-2">
                         <h2 class="display-4 mb-3 text-center">Escríbenos desde el formulario</h2>
@@ -189,7 +189,6 @@
                                         <div class="invalid-feedback"> Por favor ingresa tu nombre. </div>
                                     </div>
                                 </div>
-                                <!-- /column -->
                                 <div class="col-md-6">
                                     <div class="form-floating mb-4">
                                         <input id="form_lastname" type="text" name="surname" class="form-control" placeholder="Doe" required>
@@ -198,7 +197,6 @@
                                         <div class="invalid-feedback"> Por favor ingresa tu apellido. </div>
                                     </div>
                                 </div>
-                                <!-- /column -->
                                 <div class="col-md-6">
                                     <div class="form-floating mb-4">
                                         <input id="form_email" type="email" name="email" class="form-control" placeholder="jane.doe@example.com" required>
@@ -207,7 +205,6 @@
                                         <div class="invalid-feedback"> Por favor ingresa una direccion de mail valida. </div>
                                     </div>
                                 </div>
-                                <!-- /column -->
                                 <div class="col-md-6">
                                     <div class="form-select-wrapper mb-4">
                                         <select class="form-select" id="form-select" name="department" required>
@@ -220,7 +217,6 @@
                                         <div class="invalid-feedback"> Por favor selecciona un departamento. </div>
                                     </div>
                                 </div>
-                                <!-- /column -->
                                 <div class="col-12">
                                     <div class="form-floating mb-4">
                                         <textarea id="form_message" name="message" class="form-control" placeholder="Your message" style="height: 150px" required></textarea>
@@ -229,118 +225,111 @@
                                         <div class="invalid-feedback"> Por favor ingresa tu mensaje. </div>
                                     </div>
                                 </div>
-                                <!-- /column -->
                                 <div class="col-12 text-center">
                                     <input type="submit" class="btn btn-primary rounded-pill btn-send mb-3" value="Enviar">
                                     <p class="text-muted"><strong>*</strong> Estos campos son requeridos.</p>
                                 </div>
-                                <!-- /column -->
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+ -->
+                <section class="wrapper image-wrapper bg-auto no-overlay bg-image text-center bg-map" data-image-src="./assets/img/map.png">
+                    <div class="container pt-0 pb-14 pt-md-16 pb-md-18">
+                        <div class="row">
+                            <div class="col-lg-9 col-xxl-8 mx-auto">
+                                <h3 class="display-4 mb-8 px-xl-12">Mas de 50 clientes confian en nosotros. ¡Trabajemos juntos!</h3>
                             </div>
                             <!-- /.row -->
-                        </form>
-                        <!-- /form -->
+                        </div>
+                        <!-- /column -->
+                        <div class="row">
+                            <div class="col-md-10 col-lg-9 col-xl-7 mx-auto">
+                                <div class="row align-items-center counter-wrapper gy-4 gy-md-0">
+                                    <div class="col-md-4 text-center">
+                                        <h3 class="counter counter-lg text-primary">149</h3>
+                                        <p>Projectos terminados</p>
+                                    </div>
+                                    <!--/column -->
+                                    <div class="col-md-4 text-center">
+                                        <h3 class="counter counter-lg text-primary">80</h3>
+                                        <p>Clientes satisfechos</p>
+                                    </div>
+                                    <!--/column -->
+                                    <div class="col-md-4 text-center">
+                                        <h3 class="counter counter-lg text-primary">8</h3>
+                                        <p>Empleados senior</p>
+                                    </div>
+                                    <!--/column -->
+                                </div>
+                                <!--/.row -->
+                            </div>
+                            <!-- /column -->
+                        </div>
+                        <!-- /.row -->
                     </div>
-                    <!-- /column -->
-                </div>
-                <!-- /.row -->
+                    <!-- /.container -->
+                </section>
+                <!-- /section -->
             </div>
-            <!-- /.container -->
-        </section>
-        <!-- /section -->
-        <section class="wrapper image-wrapper bg-auto no-overlay bg-image text-center bg-map" data-image-src="./assets/img/map.png">
-            <div class="container pt-0 pb-14 pt-md-16 pb-md-18">
-                <div class="row">
-                    <div class="col-lg-9 col-xxl-8 mx-auto">
-                        <h3 class="display-4 mb-8 px-xl-12">Mas de 50 clientes confian en nosotros. ¡Trabajemos juntos!</h3>
-                    </div>
-                    <!-- /.row -->
-                </div>
-                <!-- /column -->
-                <div class="row">
-                    <div class="col-md-10 col-lg-9 col-xl-7 mx-auto">
-                        <div class="row align-items-center counter-wrapper gy-4 gy-md-0">
-                            <div class="col-md-4 text-center">
-                                <h3 class="counter counter-lg text-primary">149</h3>
-                                <p>Projectos terminados</p>
+            <!-- /.content-wrapper -->
+            <footer class="bg-dark text-inverse mt-0 mt-md-16">
+                <div class="container py-13 py-md-15">
+                    <div class="row gy-6 gy-lg-0">
+                        <div class="col-md-4 col-lg-3">
+                            <div class="widget">
+                                <img class="mb-4" src="./assets/img/swanseablancolight.png" srcset="./assets/img/swanseaazulHorizontalx2 2x" alt="" />
+                                <p class="mb-4">© 2022 Swansea. <br class="d-none d-lg-block" />All rights reserved.</p>
+                                <nav class="nav social social-white">
+                                    <a href="#"><i class="uil uil-facebook-f"></i></a>
+                                    <a href="#"><i class="uil uil-instagram"></i></a>
+                                </nav>
+                                <!-- /.social -->
                             </div>
-                            <!--/column -->
-                            <div class="col-md-4 text-center">
-                                <h3 class="counter counter-lg text-primary">80</h3>
-                                <p>Clientes satisfechos</p>
-                            </div>
-                            <!--/column -->
-                            <div class="col-md-4 text-center">
-                                <h3 class="counter counter-lg text-primary">8</h3>
-                                <p>Empleados senior</p>
-                            </div>
-                            <!--/column -->
-                        </div>
-                        <!--/.row -->
-                    </div>
-                    <!-- /column -->
-                </div>
-                <!-- /.row -->
-            </div>
-            <!-- /.container -->
-        </section>
-        <!-- /section -->
-        </div>
-        <!-- /.content-wrapper -->
-        <footer class="bg-dark text-inverse mt-0 mt-md-16">
-            <div class="container py-13 py-md-15">
-                <div class="row gy-6 gy-lg-0">
-                    <div class="col-md-4 col-lg-3">
-                        <div class="widget">
-                            <img class="mb-4" src="./assets/img/swanseablancolight.png" srcset="./assets/img/swanseaazulHorizontalx2 2x" alt="" />
-                            <p class="mb-4">© 2022 Swansea. <br class="d-none d-lg-block" />All rights reserved.</p>
-                            <nav class="nav social social-white">
-                                <a href="#"><i class="uil uil-facebook-f"></i></a>
-                                <a href="#"><i class="uil uil-instagram"></i></a>
-                            </nav>
-                            <!-- /.social -->
-                        </div>
-                        <!-- /.widget -->
-                    </div>
-                    <!-- /column -->
-                    <div class="col-md-4 col-lg-3">
-                        <div class="widget">
-                            <h4 class="widget-title text-white mb-3">Sigamos en contacto</h4>
-                            <address class="pe-xl-15 pe-xxl-17">Avda. Aviadores del Chaco N° 2581 Edificio Sky Park, Torre 1, Piso 13 Oficina D, Asunción, Paraguay</address>
-                            <a href="mailto:info@swansea.com.py">info@swansea.com.py</a><br /> +595 21 328 9690
-                        </div>
-                        <!-- /.widget -->
-                    </div>
-                    <!-- /column -->
-                    <div class="col-md-4 col-lg-3">
-                        <div class="widget">
-                            <h4 class="widget-title text-white mb-3">Saber más</h4>
-                            <ul class="list-unstyled  mb-0">
-                                <li><a href="./about.html">Sobre nosotros</a></li>
-                                <li><a href="./services.html">Servicios</a></li>
-                                <li><a href="./links.html">Info de interés</a></li>
-                            </ul>
-                        </div>
-                        <!-- /.widget -->
-                    </div>
-                    <!-- /column -->
-                    <div class="col-md-12 col-lg-3">
-                        <div class="widget">
-
                             <!-- /.widget -->
                         </div>
                         <!-- /column -->
+                        <div class="col-md-4 col-lg-3">
+                            <div class="widget">
+                                <h4 class="widget-title text-white mb-3">Sigamos en contacto</h4>
+                                <address class="pe-xl-15 pe-xxl-17">Avda. Aviadores del Chaco N° 2581 Edificio Sky Park, Torre 1, Piso 13 Oficina D, Asunción, Paraguay</address>
+                                <a href="mailto:info@swansea.com.py">info@swansea.com.py</a><br /> +595 21 328 9690
+                            </div>
+                            <!-- /.widget -->
+                        </div>
+                        <!-- /column -->
+                        <div class="col-md-4 col-lg-3">
+                            <div class="widget">
+                                <h4 class="widget-title text-white mb-3">Saber más</h4>
+                                <ul class="list-unstyled  mb-0">
+                                    <li><a href="./about.html">Sobre nosotros</a></li>
+                                    <li><a href="./services.html">Servicios</a></li>
+                                    <li><a href="./links.html">Info de interés</a></li>
+                                </ul>
+                            </div>
+                            <!-- /.widget -->
+                        </div>
+                        <!-- /column -->
+                        <div class="col-md-12 col-lg-3">
+                            <div class="widget">
+
+                                <!-- /.widget -->
+                            </div>
+                            <!-- /column -->
+                        </div>
+                        <!--/.row -->
                     </div>
-                    <!--/.row -->
-                </div>
-                <!-- /.container -->
-        </footer>
-        <div class="progress-wrap">
-            <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
+                    <!-- /.container -->
+            </footer>
+            <div class="progress-wrap">
+                <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
       <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
     </svg>
-        </div>
-        <script src="./assets/js/plugins.js"></script>
-        <script src="./assets/js/theme.js"></script>
+            </div>
+            <script src="./assets/js/plugins.js"></script>
+            <script src="./assets/js/theme.js"></script>
 </body>
 
 </html>
