--- a/logistics/test/index.html
+++ b/logistics/test/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="Repremar Logistics.">
   <meta name="keywords" content="Repremar, Repremar Logitics, Logistics, Logistica">
   <meta name="author" content="Repremar Group">
-  <title>Repremar Logistics</title>
+  <title>Repremar Logistics Test</title>
   <link rel="shortcut icon" href="./assets/img/favicon.png">
   <link rel="stylesheet" href="./assets/css/plugins.css">
   <link rel="stylesheet" href="./assets/css/style.css">
