--- a/logistics/test/contact.html
+++ b/logistics/test/contact.html
@@ -219,8 +219,8 @@
                             <div class="form-select-wrapper mb-4">
                               <select class="form-select" id="form-select" name="department" required>
                                 <option selected disabled value="">Selecciona equipo</option>
-                                <option value="Sales">Comercial</option>
-                                <option value="Marketing">RRHH</option>
+                                <option value="Comercial">Comercial</option>
+                                <option value="RRHH">RRHH</option>
                               </select>
                               <div class="valid-feedback"> Bien! </div>
                               <div class="invalid-feedback"> Eliga un equipo. </div>
