heramientas en index

--- a/logistics/test/contact.html
+++ b/logistics/test/contact.html
@@ -39,9 +39,6 @@
                                         <a class="nav-link " href="./services.html">Servicios</a>
                                     </li>
                                     <li class="nav-item dropdown">
-                                        <a class="nav-link " href="./services.html">Herramientas</a>
-                                    </li>
-                                    <li class="nav-item dropdown">
                                         <a class="nav-link " href="./links.html">Info de interés</a>
                                     </li>
                                     <li class="nav-item dropdown">
@@ -186,7 +183,7 @@
                       <p class="lead text-center mb-10">Escribe un mensaje a alguno de nuestros equipos.</p>
                       <form name="contact" class="contact-form" method="POST" data-netlify="true" onSubmit="submit" data-netlify-honeypot="bot-field">
                         <input class="d-none" name="bot-field">
-                        <input class="d-none" name="Empresa" value="Repremar Logistics:">
+                        <input class="d-none" name="Empresa" value="Repremar Logistics:">Repremar Logistics
                         <div class="messages"></div>
                         <div class="row gx-4">
                           <div class="col-md-6">
