--- a/logistics/test/index.html
+++ b/logistics/test/index.html
@@ -40,9 +40,6 @@
                     <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Servicios</a> 
                   </li>
                   <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Herramientas</a>
-                  </li>
-                  <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Info de Interés</a>
                   </li>
                   <li class="nav-item dropdown dropdown-mega">
@@ -210,23 +207,58 @@
             <!-- /.card -->
             <!-- /.row -->
             <!-- /.swiper-container -->
-            <!--/.row -->
-            <!--/.row -->
-            <div class="wrapper image-wrapper bg-auto no-overlay bg-image text-center bg-map" data-image-src="./assets/img/map.png">
-              <div class="container py-md-16 py-lg-18">
-                <div class="row">
-                  <div class="col-xl-11 col-xxl-9 mx-auto">
-                    <h3 class="display-4 mb-8 px-lg-8">We are trusted by over 5000+ clients. Join them now and grow your business.</h3>
+            <section id="snippet-1" class="wrapper bg-light wrapper-border">
+              <div class="container pt-15 pt-md-17 pb-13 pb-md-15">
+                <div class="row text-center">
+                  <div class="col-xl-10 mx-auto">
+                    <h3 class="display-4 mb-10 px-xxl-15">Herramientas utiles.</h3>
                   </div>
                   <!-- /column -->
                 </div>
                 <!-- /.row -->
-                <div class="d-flex justify-content-center">
-                  <span><a class="btn btn-primary rounded-pill">Get Started</a></span>
-                </div>
+            <!--/.H1 -->
+            <div class="row gy-6">
+              <div class="col-md-6 col-lg-4">
+                <a href="pdf/IMOINGLES.pdf" target="_blank" class="card shadow-lg lift h-100">
+                  <div class="card-body p-5 d-flex flex-row">
+                    <div>
+                      <span class="avatar bg-red text-white w-11 h-11 fs-20 me-4">IMO</span>
+                    </div>
+                    <div>
+                      <span class="badge bg-pale-blue text-blue rounded py-1 mb-2">PDF</span>
+                      <h4 class="mb-1">Clasificación de mercancias peligrosas.</h4>
+                    </div>
+                  </div>
+                </a>
               </div>
-              <!-- /.container -->
-            </div>
+              <!--/column -->
+              <div class="col-md-6 col-lg-4">
+                <a href="pdf/REPREMAR_Equipment_Specifications.pdf" target="_blank" class="card shadow-lg lift h-100">
+                  <div class="card-body p-5 d-flex flex-row">
+                    <div>
+                      <span class="avatar bg-green text-white w-11 h-11 fs-20 me-4">CTNR</span>
+                    </div>
+                    <div>
+                      <span class="badge bg-pale-aqua text-aqua rounded py-1 mb-2">PDF</span>
+                      <h4 class="mb-1">Especificaciones de conteneores/equipos.</h4>
+                    </div>
+                  </div>
+                </a>
+              </div>
+              <!--/column -->
+              <div class="col-md-6 col-lg-4">
+                <a href="pdf/REPREMAR_INCOTERMS.pdf" target="_blank" class="card shadow-lg lift h-100">
+                  <div class="card-body p-5 d-flex flex-row">
+                    <div>
+                      <span class="avatar bg-yellow text-white w-11 h-11 fs-20 me-4">INCO</span>
+                    </div>
+                    <div>
+                      <span class="badge bg-pale-blue text-blue rounded py-1 mb-2">PDF</span>
+                      <h4 class="mb-1">INCOTERMS</h4>
+                    </div>
+                  </div>
+                </a>
+              </div>
             <!-- /.wrapper -->
           </div>
           <!--/.card-body -->
