--- a/logistics/test/index.html
+++ b/logistics/test/index.html
@@ -16,7 +16,7 @@
 
 <body>
   <div class="content-wrapper">
-    <header class="wrapper bg-gray">
+    <header class="wrapper bg-white">
       <nav class="navbar navbar-expand-lg fancy navbar-light navbar-bg-light caret-none">
         <div class="container">
           <div class="navbar-collapse-wrapper bg-white d-flex flex-row flex-nowrap w-100 justify-content-between align-items-center">
