--- a/logistics/test/index.html
+++ b/logistics/test/index.html
@@ -240,7 +240,7 @@
                     </div>
                     <div>
                       <span class="badge bg-pale-aqua text-aqua rounded py-1 mb-2">PDF</span>
-                      <h4 class="mb-1">Especificaciones de conteneores/equipos.</h4>
+                      <h4 class="mb-1">Especificaciones de conteneores<br>equipos.</h4>
                     </div>
                   </div>
                 </a>
