--- a/logistics/test/index.html
+++ b/logistics/test/index.html
@@ -276,7 +276,7 @@
         <div class="col-lg-4">
           <div class="widget">
             <h3 class="h2 mb-3 text-white">Sigamos en contacto</h3>
-            <p class="lead mb-5">Repremar Logistics se ocupara de solucionar todos tus problemas logisticos para que puedas desarrollar tu negocio sin preocupación alguna.</p>
+            <p class="lead mb-5">Repremar Logistics se ocupara de solucionar todos s us problemas logisticos para que puedas desarrollar tu negocio sin preocupación alguna.</p>
             <a href="#" class="btn btn-white  rounded-pill">Contáctanos</a>
           </div>
           <!-- /.widget -->
