--- a/logistics/test/contact.html
+++ b/logistics/test/contact.html
@@ -48,8 +48,8 @@
                             <!-- /.navbar-nav -->
                             <div class="offcanvas-footer d-lg-none">
                                 <div>
-                                    <a href="mailto:info@swansea.com.py" class="link-inverse">info@swansea.com.py</a>
-                                    <br /> +595 21 328 9690 <br />
+                                    <a href="mailto:info@swansea.com.py" class="link-inverse">info@repremar.com</a>
+                                    <br /> +598 2916 9416 <br />
                                     <nav class="nav social social-white mt-4">
                                         <a href="https://twitter.com/repremar"><i class="uil uil-twitter"></i></a>
                                         <a href="https://www.facebook.com/repremarlogistics/"><i class="uil uil-facebook-f"></i></a>
@@ -77,15 +77,7 @@
                             </li>
 
                             <!-- /.social -->
-                            <li class="nav-item">
-                                <nav class="nav social social-muted justify-content-end text-end">
-                                    <a href="https://twitter.com/repremar"><i class="uil uil-twitter"></i></a>
-                                    <a href="https://www.facebook.com/repremarlogistics/"><i class="uil uil-facebook-f"></i></a>
-                                    <a href="https://www.instagram.com/repremarlogistics.uy/"><i class="uil uil-instagram"></i></a>
-                                    <a href="https://www.linkedin.com/company/repremar-logistics/?originalSubdomain=uy"><i class="uil uil-linkedin"></i></a>
-                                </nav>
-
-                            </li>
+                      
 
                             <li class="nav-item d-none d-md-block">
                                 <a href="https://www.repremar.com">
