--- a/logistics/test/contact.html
+++ b/logistics/test/contact.html
@@ -100,7 +100,7 @@
             <div class="container pt-17 pb-20 pt-md-19 pb-md-21 text-center">
                 <div class="row">
                     <div class="col-lg-8 mx-auto">
-                        <h1 class="display-1 mb-3 text-white">Contáctanos</h1>
+                        <h1 class="display-1 mb-3 text-white" href="./contact.html">Contáctanos</h1>
 
                         <!-- /nav -->
                     </div>
@@ -175,7 +175,7 @@
                       <p class="lead text-center mb-10">Escribe un mensaje a alguno de nuestros equipos.</p>
                       <form name="contact" class="contact-form" method="POST" data-netlify="true" onSubmit="submit" data-netlify-honeypot="bot-field">
                         <input class="d-none" name="bot-field">
-                        <input class="d-none" name="Empresa" value="Repremar Logistics:">Repremar Logistics
+                        <input type="hidden" value="Repremar Logistics">
                         <div class="messages"></div>
                         <div class="row gx-4">
                           <div class="col-md-6">
