--- a/logistics/test/contact.html
+++ b/logistics/test/contact.html
@@ -209,8 +209,8 @@
                             <div class="form-select-wrapper mb-4">
                               <select class="form-select" id="form-select" name="department" required>
                                 <option selected disabled value="">Selecciona equipo</option>
-                                <option value="Comercial">Comercial</option>
-                                <option value="RRHH">RRHH</option>
+                                <option value="Comercial Repremar Logistics">Comercial</option>
+                                <option value="RRHH Repremar Logistics">RRHH</option>
                               </select>
                               <div class="valid-feedback"> Bien! </div>
                               <div class="invalid-feedback"> Eliga un equipo. </div>
@@ -242,66 +242,65 @@
             </div>
             <!-- /.content-wrapper -->
             <footer class="bg-green text-white">
-                <div class="container pt-20 pt-lg-21 pb-7">
-                  <div class="row gy-6 gy-lg-0">
-                    <div class="col-lg-4">
-                      <div class="widget">
-                        <h3 class="h2 mb-3 text-white">Sigamos en contacto</h3>
-                        <p class="lead mb-5">Repremar Logistics se ocupara de solucionar todos tus problemas logisticos para que puedas desarrollar tu negocio sin preocupación alguna.</p>
-                        <a href="#" class="btn btn-white  rounded-pill">Contáctanos</a>
-                      </div>
-                      <!-- /.widget -->
+              <div class="container pt-20 pt-lg-21 pb-7">
+                <div class="row gy-6 gy-lg-0">
+                  <div class="col-lg-4">
+                    <div class="widget">
+                      <h3 class="h2 mb-3 text-white">Sigamos en contacto</h3>
+                      <p class="lead mb-5">Repremar Logistics se ocupara de solucionar todos sus problemas logisticos para que puedas desarrollar tu negocio sin preocupación alguna.</p>
+                      <a href="./contact.html" class="btn btn-white  rounded-pill">Contáctanos</a>
                     </div>
-                    <!-- /column -->
-                    <div class="col-md-4 col-lg-2 offset-lg-2">
-                      <div class="widget">
-                        <h4 class="widget-title text-white mb-3">¿Necesitas ayuda?</h4>
-                        <ul class="list-unstyled text-reset mb-0">
-                          <li><a href="#">Contacta con soporte</a></li>
-                        </ul>
-                      </div>
-                      <!-- /.widget -->
-                    </div>
-                    <!-- /column -->
-                    <div class="col-md-4 col-lg-2">
-                      <div class="widget">
-                        <h4 class="widget-title text-white mb-3">Saber más</h4>
-                        <ul class="list-unstyled  mb-0">
-                          <li><a href="#" style="color:white">Sobre nosotros</a></li>
-                          <li><a href="#" style="color:white">Servicios</a></li>
-                          <li><a href="#" style="color:white">Proyectos</a></li>
-                          <li><a href="#" style="color:white">Herramientas</a></li>
-                        </ul>
-                      </div>
-                      <!-- /.widget -->
-                    </div>
-                    <!-- /column -->
-                    <div class="col-md-4 col-lg-2">
-                      <div class="widget">
-                        <h4 class="widget-title text-white mb-3">Get in Touch</h4>
-                        <address>Misiones 1372 6to Piso, Montevideo, Uruguay</address>
-                        <a href="mailto:first.last@email.com" style="color:white">info@replog.com</a><br /> +598 2916 9416
-                      </div>
-                      <!-- /.widget -->
-                    </div>
-                    <!-- /column -->
+                    <!-- /.widget -->
                   </div>
-                  <!--/.row -->
-                  <hr class="mt-13 mt-md-15 mb-7" />
-                  <div class="d-md-flex align-items-center justify-content-between">
-                    <p class="mb-2 mb-lg-0">© 2023 Repremar Group. All rights reserved.</p>
-                    <nav class="nav social social-white text-md-end">
-                      <a href="https://twitter.com/repremar"><i class="uil uil-twitter"></i></a>
-                      <a href="https://www.facebook.com/repremarlogistics/"><i class="uil uil-facebook-f"></i></a>
-                      <a href="https://www.instagram.com/repremarlogistics.uy/"><i class="uil uil-instagram"></i></a>
-                      <a href="https://www.linkedin.com/company/repremar-logistics/?originalSubdomain=uy"><i class="uil uil-linkedin"></i></a>
-                    </nav>
-                    <!-- /.social -->
+                  <!-- /column -->
+                  <div class="col-md-4 col-lg-2 offset-lg-2">
+                    <div class="widget">
+                      <h4 class="widget-title text-white mb-3">¿Necesitas ayuda?</h4>
+                      <ul class="list-unstyled text-reset mb-0">
+                        <li><a href="./contact.html">Contacta con soporte</a></li>
+                      </ul>
+                    </div>
+                    <!-- /.widget -->
                   </div>
-                  <!-- /div -->
+                  <!-- /column -->
+                  <div class="col-md-4 col-lg-2">
+                    <div class="widget">
+                      <h4 class="widget-title text-white mb-3">Saber más</h4>
+                      <ul class="list-unstyled  mb-0">
+                        <li><a href="#" style="color:white">Sobre nosotros</a></li>
+                        <li><a href="#" style="color:white">Servicios</a></li>
+                        <li><a href="#" style="color:white">Info de Interés</a></li>
+                      </ul>
+                    </div>
+                    <!-- /.widget -->
+                  </div>
+                  <!-- /column -->
+                  <div class="col-md-4 col-lg-2">
+                    <div class="widget">
+                      <h4 class="widget-title text-white mb-3">Información</h4>
+                      <address>Misiones 1372 6to Piso, Montevideo, Uruguay</address>
+                      <a href="mailto:first.last@email.com" style="color:white">info@replog.com</a><br /> +598 2916 9416
+                    </div>
+                    <!-- /.widget -->
+                  </div>
+                  <!-- /column -->
                 </div>
-                <!-- /.container -->
-              </footer>
+                <!--/.row -->
+                <hr class="mt-13 mt-md-15 mb-7" />
+                <div class="d-md-flex align-items-center justify-content-between">
+                  <p class="mb-2 mb-lg-0">© 2023 Repremar Group. All rights reserved.</p>
+                  <nav class="nav social social-white text-md-end">
+                    <a href="https://twitter.com/repremar"><i class="uil uil-twitter"></i></a>
+                    <a href="https://www.facebook.com/repremarlogistics/"><i class="uil uil-facebook-f"></i></a>
+                    <a href="https://www.instagram.com/repremarlogistics.uy/"><i class="uil uil-instagram"></i></a>
+                    <a href="https://www.linkedin.com/company/repremar-logistics/?originalSubdomain=uy"><i class="uil uil-linkedin"></i></a>
+                  </nav>
+                  <!-- /.social -->
+                </div>
+                <!-- /div -->
+              </div>
+              <!-- /.container -->
+            </footer>
             <div class="progress-wrap">
                 <svg class="progress-circle svg-content" width="100%" height="100%" viewBox="-1 -1 102 102">
       <path d="M50,1 a49,49 0 0,1 0,98 a49,49 0 0,1 0,-98" />
