--- a/logistics/test/index.html
+++ b/logistics/test/index.html
@@ -267,8 +267,8 @@
         <div class="col-lg-4">
           <div class="widget">
             <h3 class="h2 mb-3 text-white">Sigamos en contacto</h3>
-            <p class="lead mb-5">Repremar Logistics se ocupara de solucionar todos s us problemas logisticos para que puedas desarrollar tu negocio sin preocupación alguna.</p>
-            <a href="#" class="btn btn-white  rounded-pill">Contáctanos</a>
+            <p class="lead mb-5">Repremar Logistics se ocupara de solucionar todos sus problemas logisticos para que puedas desarrollar tu negocio sin preocupación alguna.</p>
+            <a href="./contact.html" class="btn btn-white  rounded-pill">Contáctanos</a>
           </div>
           <!-- /.widget -->
         </div>
@@ -277,7 +277,7 @@
           <div class="widget">
             <h4 class="widget-title text-white mb-3">¿Necesitas ayuda?</h4>
             <ul class="list-unstyled text-reset mb-0">
-              <li><a href="#">Contacta con soporte</a></li>
+              <li><a href="./contact.html">Contacta con soporte</a></li>
             </ul>
           </div>
           <!-- /.widget -->
@@ -289,8 +289,7 @@
             <ul class="list-unstyled  mb-0">
               <li><a href="#" style="color:white">Sobre nosotros</a></li>
               <li><a href="#" style="color:white">Servicios</a></li>
-              <li><a href="#" style="color:white">Proyectos</a></li>
-              <li><a href="#" style="color:white">Herramientas</a></li>
+              <li><a href="#" style="color:white">Info de Interés</a></li>
             </ul>
           </div>
           <!-- /.widget -->
@@ -298,7 +297,7 @@
         <!-- /column -->
         <div class="col-md-4 col-lg-2">
           <div class="widget">
-            <h4 class="widget-title text-white mb-3">Get in Touch</h4>
+            <h4 class="widget-title text-white mb-3">Información</h4>
             <address>Misiones 1372 6to Piso, Montevideo, Uruguay</address>
             <a href="mailto:first.last@email.com" style="color:white">info@replog.com</a><br /> +598 2916 9416
           </div>
