--- a/logistics/test/index.html
+++ b/logistics/test/index.html
@@ -33,7 +33,7 @@
               <div class="offcanvas-body ms-lg-auto d-flex flex-column h-100">
                 <ul class="navbar-nav">
                   <li class="nav-item dropdown dropdown-mega">
-                    <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Sobre Nosotros</a>
+                    <a class="nav-link dropdown-toggle" href="./about.html" data-bs-toggle="dropdown">Sobre Nosotros</a>
                     <!--/.dropdown-menu -->
                   </li>
                   <li class="nav-item dropdown">
@@ -99,12 +99,12 @@
             <h2 class="fs-16 text-uppercase ls-xl text-dark mb-4">¡BIENVENIDOS!</h2>
             <h1 class="display-1 fs-58 mb-7">TU SOCIO LOGÍSTICO EN LA REGIÓN</h1>
             <div class="d-flex justify-content-center mb-5 mb-md-0" data-cues="slideInDown" data-group="page-title-buttons" data-delay="900">
-              <span><a href="#" class="btn btn-lg btn-primary rounded-pill me-2">Ver más</a></span>
+              <span><a href="./about.html" class="btn btn-lg btn-primary rounded-pill me-2">Ver más</a></span>
               <span><a href="#" class="btn btn-lg btn-outline-primary rounded-pill">Contacto</a></span>
             </div>
           </div>
           <div>
-
+            
           </div>
           <!--/column -->
         </div>
