--- a/logistics/test/contact.html
+++ b/logistics/test/contact.html
@@ -16,85 +16,81 @@
 
 <body>
     <div class="content-wrapper">
-        <header class="wrapper bg-gray">
-            <nav class="navbar navbar-expand-lg center-nav transparent navbar-light">
-                <div class="container flex-lg-row flex-nowrap align-items-center">
-                    <div class="navbar-brand w-100">
-                        <a href="./index.html">
-                            <img src="./assets/img/replog.png" srcset="./assets/img/replog.pngx2 2x" alt="" />
-                        </a>
+      <header class="wrapper bg-white">
+        <nav class="navbar navbar-expand-lg fancy navbar-light navbar-bg-light caret-none">
+          <div class="container">
+            <div class="navbar-collapse-wrapper bg-white d-flex flex-row flex-nowrap w-100 justify-content-between align-items-center">
+              <div class="navbar-brand w-100">
+                <a href="./demo17.html">
+                  <img src="./assets/img/replog.png" srcset="./assets/img/logo-dark@2x.png 2x" alt="" />
+                </a>
+              </div>
+              <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
+                <div class="offcanvas-header d-lg-none">
+                  <h3 class="text-white fs-30 mb-0">Repremar Logistics</h3>
+                  <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body ms-lg-auto d-flex flex-column h-100">
+                  <ul class="navbar-nav">
+                    <li class="nav-item dropdown dropdown-mega">
+                      <a class="nav-link dropdown-toggle" href="./about.html" data-bs-toggle="dropdown">Sobre Nosotros</a>
+                      <!--/.dropdown-menu -->
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Servicios</a> 
+                    </li>
+                    <li class="nav-item dropdown">
+                      <a class="nav-link dropdown-toggle" href="#" data-bs-toggle="dropdown">Info de Interés</a>
+                    </li>
+                    <li class="nav-item dropdown dropdown-mega">
+                      <a class="nav-link dropdown-toggle" href="./contact.html">Contacto</a>
+                    </li>
+                  <div class="offcanvas-footer d-lg-none">
+                    <div>
+                      <nav class="nav social social-white mt-4">
+                        <a href="https://twitter.com/repremar"><i class="uil uil-twitter"></i></a>
+                        <a href="https://www.facebook.com/repremarlogistics/"><i class="uil uil-facebook-f"></i></a>
+                        <a href="https://www.instagram.com/repremarlogistics.uy/"><i class="uil uil-instagram"></i></a>
+                        <a href="https://www.linkedin.com/company/repremar-logistics/?originalSubdomain=uy"><i class="uil uil-linkedin"></i></a>
+                      </nav>
+                      <!-- /.social -->
                     </div>
-                    <div class="navbar-collapse offcanvas offcanvas-nav offcanvas-start">
-                        <div class="offcanvas-header d-lg-none">
-                            <h3 class="text-white fs-30 mb-0">Repremar Logistics</h3>
-                            <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                        </div>
-                        <div class="offcanvas-body ms-lg-auto d-flex flex-column h-100">
-                            <ul class="navbar-nav">
-                                <li class="nav-item dropdown dropdown-mega">
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link " href="./about.html">Sobre nosotros</a>
-                                    </li>
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link " href="./services.html">Servicios</a>
-                                    </li>
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link " href="./links.html">Info de interés</a>
-                                    </li>
-                                    <li class="nav-item dropdown">
-                                        <a class="nav-link " href="./contact.html">Contacto</a>
-                                    </li>
-                            </ul>
-                            <!-- /.navbar-nav -->
-                            <div class="offcanvas-footer d-lg-none">
-                                <div>
-                                    <a href="mailto:info@swansea.com.py" class="link-inverse">info@repremar.com</a>
-                                    <br /> +598 2916 9416 <br />
-                                    <nav class="nav social social-white mt-4">
-                                        <a href="https://twitter.com/repremar"><i class="uil uil-twitter"></i></a>
-                                        <a href="https://www.facebook.com/repremarlogistics/"><i class="uil uil-facebook-f"></i></a>
-                                        <a href="https://www.instagram.com/repremarlogistics.uy/"><i class="uil uil-instagram"></i></a>
-                                        <a href="https://www.linkedin.com/company/repremar-logistics/?originalSubdomain=uy"><i class="uil uil-linkedin"></i></a>
-                                      </nav>
-                                    <!-- /.social -->
-                                </div>
-                            </div>
-                            <!-- /.offcanvas-footer -->
-                        </div>
-                        <!-- /.offcanvas-body -->
-                    </div>
-                    <!-- /.navbar-collapse -->
-                    <div class="navbar-other w-100 d-flex ms-auto">
-                        <ul class="navbar-nav flex-row align-items-center ms-auto">
-
-                            <!-- /.languaje -->
-                            <li class="nav-item dropdown language-select text-uppercase">
-                                <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Es</a>
-                                <ul class="dropdown-menu">
-                                    <li class="nav-item"><a class="dropdown-item" href="./contactEn.html">En</a></li>
-                                    <li class="nav-item"><a class="dropdown-item" href="./contact.html">Es</a></li>
-                                </ul>
-                            </li>
-
-                            <!-- /.social -->
-                      
-
-                            <li class="nav-item d-none d-md-block">
-                                <a href="https://www.repremar.com">
-                                    <img src="./assets/img/RGroup2.png" alt="Repremar Group Web" />
-                                </a>
-                            </li>
-
-                            <li class="nav-item d-lg-none">
-                                <button class="hamburger offcanvas-nav-btn"><span></span></button>
-                            </li>
-                        </ul>
-                        <!-- /.navbar-nav -->
-                    </div>
-                    <!-- /.container -->
-            </nav>
-            <!-- /.navbar -->
-        </header>
+                  </div>
+                  <!-- /.offcanvas-footer -->
+                </div>
+                <!-- /.offcanvas-body -->
+              </div>
+              <!-- /.navbar-collapse -->
+              <div class="navbar-other w-100 d-flex ms-auto">
+                <ul class="navbar-nav flex-row align-items-center ms-auto">
+                  <!-- /.languaje -->
+                  <li class="nav-item dropdown language-select text-uppercase">
+                    <a class="nav-link dropdown-item dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Es</a>
+                    <ul class="dropdown-menu">
+                      <li class="nav-item"><a class="dropdown-item" href="indexEn.html">En</a></li>
+                      <li class="nav-item"><a class="dropdown-item" href="index.html">Es</a></li>
+                    </ul>
+                  </li>
+                  <li class="nav-item d-none d-md-block">
+                    <a href="https://www.repremar.com">
+                        <img src="./assets/img/RGroup2.png" alt="Repremar Group Web" />
+                    </a>
+                </li>
+  
+                  <li class="nav-item d-lg-none">
+                    <button class="hamburger offcanvas-nav-btn"><span></span></button>
+                  </li>
+                </ul>
+                <!-- /.navbar-nav -->
+              </div>
+              <!-- /.navbar-other -->
+            </div>
+            <!-- /.navbar-collapse-wrapper -->
+          </div>
+          <!-- /.container -->
+        </nav>
+        <!-- /.navbar -->
+      </header>
         <!-- /header -->
         <section class="wrapper image-wrapper bg-image bg-overlay bg-overlay-400 text-white" data-image-src="./assets/img/photos/1contactos.jpg">
             <div class="container pt-17 pb-20 pt-md-19 pb-md-21 text-center">
