--- a/logistics/test/contact.html
+++ b/logistics/test/contact.html
@@ -21,7 +21,7 @@
           <div class="container">
             <div class="navbar-collapse-wrapper bg-white d-flex flex-row flex-nowrap w-100 justify-content-between align-items-center">
               <div class="navbar-brand w-100">
-                <a href="./demo17.html">
+                <a href="./index.html">
                   <img src="./assets/img/replog.png" srcset="./assets/img/logo-dark@2x.png 2x" alt="" />
                 </a>
               </div>
@@ -275,7 +275,7 @@
                     <div class="widget">
                       <h4 class="widget-title text-white mb-3">Información</h4>
                       <address>Misiones 1372 6to Piso, Montevideo, Uruguay</address>
-                      <a href="mailto:first.last@email.com" style="color:white">info@replog.com</a><br /> +598 2916 9416
+                      <a href="mailto:first.last@email.com" style="color:white">info.logistics@repremar.com</a><br /> +598 2916 9416
                     </div>
                     <!-- /.widget -->
                   </div>
