--- a/logistics/test/index.html
+++ b/logistics/test/index.html
@@ -21,7 +21,7 @@
         <div class="container">
           <div class="navbar-collapse-wrapper bg-white d-flex flex-row flex-nowrap w-100 justify-content-between align-items-center">
             <div class="navbar-brand w-100">
-              <a href="./demo17.html">
+              <a href="./index.html">
                 <img src="./assets/img/replog.png" srcset="./assets/img/logo-dark@2x.png 2x" alt="" />
               </a>
             </div>
