--- a/logistics/test/index.html
+++ b/logistics/test/index.html
@@ -147,8 +147,8 @@
                 <div class="icon btn btn-block btn-lg btn-soft-orange disabled mb-5"> <i class="uil uil-laptop-cloud"></i> </div>
                 <h4>Mejora Continua</h4>
                 <p class="mb-3">
-                  Estamos continuamente invirtiendo en equipamiento
-                  informático y software que ayudan a resaltar y reforzar nuestras capacidades.</p>
+                  Estamos continuamente invirtiendo en equipamiento 
+                  y software que ayudan a resaltar y reforzar nuestras capacidades.</p>
                 <a href="#" class="more hover link-orange">Learn More</a>
               </div>
               <!--/column -->
