--- a/shipping/index.html
+++ b/shipping/index.html
@@ -446,12 +446,8 @@ text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
                         <h3>Azamara Cruises</h3>
                     </li>
 					<li>
-                        <img class="icono" src="logos/seven.jpg" />
-                        <h3>SevenSeas</h3>
-                    </li>
-					<li>
-                        <img class="icono" src="logos/pullmantur.jpg" />
-                        <h3>Pullmantur</h3>
+                        <img class="icono" src="logos/vikingcruises.png" />
+                        <h3>Viking Cruises</h3>
                     </li>
                     
                  </ul>   
