--- a/shipping/index.html
+++ b/shipping/index.html
@@ -478,12 +478,12 @@ text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
                         <h3>K - Line</h3>
                     </li>
                     <li>
-                        <img class="icono" src="logos/bbcchartering.jpg" />
-                        <h3>BBC Chartering</h3>
+                        <img class="icono" src="logos/norden.png" />
+                        <h3>Norden</h3>
                     </li>
                     <li>
-                        <img class="icono" src="logos/hansa.jpg" />
-                        <h3>Hansa Heavy Lift</h3>
+                        <img class="icono" src="logos/mur.png" />
+                        <h3>Mur</h3>
                     </li>
                     <li>
                         <img class="icono" src="logos/spliethoff.jpg" />
@@ -494,43 +494,18 @@ text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
                         <h3>Andritz</h3>
                     </li>
 					<li>
-                        <img class="icono" src="logos/montes.jpg" />
-                        <h3>Montes del Plata</h3>
-                    </li>
-                 </ul>   
-
-				<h2><span class="celeste"><b>TANKERS</b></span></h2>
-                <ul class="container principals-list">
-
-                    <li>
-                        <img class="icono" src="logos/ancap.jpg" />
-                        <h3>Ancap</h3>
+                        <img class="icono" src="logos/pacificbasin.png" />
+                        <h3>Pacific Basin</h3>
                     </li>
                     <li>
-                        <img class="icono" src="logos/spt.jpg" />
-                        <h3>Spt</h3>
-                    </li>
-					<li>
-                        <img class="icono" src="logos/next.jpg" />
-                        <h3>Nextmaritime</h3>
+                        <img class="icono" src="logos/jlauritzen.jpg" />
+                        <h3>J. Lauritzen</h3>
                     </li>
                     <li>
-                        <img class="icono" src="logos/torm.jpg" />
-                        <h3>Torm</h3>
+                        <img class="icono" src="logos/hongfa.jfif" />
+                        <h3>Hongfa Shipping</h3>
                     </li>
-                    <li>
-                        <img class="icono" src="logos/repsol.jpg" />
-                        <h3>Repsol</h3>
-                    </li>
-                    <li>
-                        <img class="icono" src="logos/sk.jpg" />
-                        <h3>SK B&T</h3>
-                    </li>
-					<li>
-                        <img class="icono" src="logos/winson.jpg" />
-                        <h3>Winson Group</h3>
-                    </li>
-                 </ul>    
+                 </ul>     
 				 
 				 <h2><span class="celeste"><b>OIL & GAS</b></span></h2>
                 <ul class="container principals-list">
@@ -542,6 +517,14 @@ text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
 					<li>
                         <img class="icono" src="logos/bourbon.jpg" />
                         <h3>Bourbon</h3>
+                    </li>
+                    <li>
+                        <img class="icono" src="logos/sk.jpg" />
+                        <h3>SK B&T</h3>
+                    </li>
+                    <li>
+                        <img class="icono" src="logos/winson.jpg" />
+                        <h3>Winson Group</h3>
                     </li>
                     
                  </ul>
