--- a/logistics/index.html
+++ b/logistics/index.html
@@ -393,6 +393,13 @@ About
                                 </p>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col-sm-4 col-sm-offset-4">
+                                <a href="https://www.soul.com.uy/repremar/index.html" target="_blank">
+                                    <div class="policy_button" style="text-align: center;"><b>BUY CONTAINERS</b></div>
+                                </a>
+                            </div>
+                        </div>
 
                     </div>
                 </div>
