--- a/logistics/index_es.html
+++ b/logistics/index_es.html
@@ -390,7 +390,7 @@ About
                         </div>
                         <div class="row">
                             <div class="col-sm-4 col-sm-offset-4">
-                                <a href="https://www.soul.com.uy/repremar/index.html" target="_blank">
+                                <a href="contenedores/index.html" target="_blank">
                                     <div class="policy_button" style="text-align: center;"><b>BUY CONTAINERS</b></div>
                                 </a>
                             </div>
