prueba con enviar 2 en contenedores

--- a/logistics/contenedores/index.html
+++ b/logistics/contenedores/index.html
@@ -609,7 +609,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             
 
             <div class="form-block-2 w-form">
-                <form id="email-form" action="enviar.php"  method="post" class="form-2">
+                <form id="email-form" action="enviar2.php"  method="post" class="form-2">
                     <label for="nombre" class="field-label-4">Nombre</label>
                         <input type="text" class="w-input" maxlength="256" name="Nombre"  id="Nombre" />
                     <label for="apellido" class="field-label-4">Apellido</label>
