prueba containers netlify email

--- a/logistics/contenedores/index.html
+++ b/logistics/contenedores/index.html
@@ -680,9 +680,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
   
   
-                  <form id="email-form" action="enviar.php"  method="post" class="form">
+                  <form name="containers" data-netlify="true" onSubmit="submit"  method="post" class="form">
                     <label for="nombre" class="field-label-4">Nombre</label>
-                        <input type="text" class="w-input" maxlength="256" name="Nombre"  id="Nombre" />
+                        <input type="text" class="w-input" maxlength="256" name="nombre"  id="Nombre" />
                     <label for="apellido" class="field-label-4">Apellido</label>
                         <input type="text" class="w-input" maxlength="256" name="apellido"  id="apellido" />
                     <label for="email" class="field-label-3">Email </label>
