--- a/logistics/contenedores/index.html
+++ b/logistics/contenedores/index.html
@@ -690,7 +690,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <label for="Tel-fono" class="field-label-3">Comentarios</label>
                         <input type="text" class="w-input" maxlength="256" name="comentarios"   id="comentarios" />
                         <div class="centrado">
-                        <input type="submit" value="ENVIAR CONSULTA" data-wait="Please wait..." class="submit-button w-button" />
+                        <button type="submit" class="w-nav-button">Enviar Consulta</button>
                         </div>
                 </form>
                     
