--- a/logistics/contenedores/index.html
+++ b/logistics/contenedores/index.html
@@ -609,9 +609,9 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             
 
             <div class="form-block-2 w-form">
-                <form id="email-form" action="enviar.php"  method="post" class="form-2">
+                <form name="containers" data-netlify="true" onSubmit="submit"  method="post" class="form">
                     <label for="nombre" class="field-label-4">Nombre</label>
-                        <input type="text" class="w-input" maxlength="256" name="Nombre"  id="Nombre" />
+                        <input type="text" class="w-input" maxlength="256" name="nombre"  id="Nombre" />
                     <label for="apellido" class="field-label-4">Apellido</label>
                         <input type="text" class="w-input" maxlength="256" name="apellido"  id="apellido" />
                     <label for="email" class="field-label-3">Email </label>
@@ -619,7 +619,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     <label for="Tel-fono" class="field-label-3">Comentarios</label>
                         <input type="text" class="w-input" maxlength="256" name="comentarios"   id="comentarios" />
                         <div class="centrado">
-                        <input type="submit" value="ENVIAR CONSULTA" data-wait="Please wait..." class="submit-button w-button" />
+                        <button type="submit" class="w-nav-button">Enviar Consulta</button>
                         </div>
                 </form>
                 <div class="w-form-done">
@@ -680,7 +680,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
   
   
-                  <form name="containers" data-netlify="true" onSubmit="submit"  method="post" class="form">
+                <form name="containers" data-netlify="true" onSubmit="submit"  method="post" class="form">
                     <label for="nombre" class="field-label-4">Nombre</label>
                         <input type="text" class="w-input" maxlength="256" name="nombre"  id="Nombre" />
                     <label for="apellido" class="field-label-4">Apellido</label>
