--- a/logistics/contenedores/index.html
+++ b/logistics/contenedores/index.html
@@ -609,7 +609,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             
 
             <div class="form-block-2 w-form">
-                <form id="email-form" action="enviar.php"  method="post" class="form-2">
+                <form id="email-form" data-netlify="true" onSubmit="submit" name="containers"  method="post" class="form">
                     <label for="nombre" class="field-label-4">Nombre</label>
                         <input type="text" class="w-input" maxlength="256" name="Nombre"  id="Nombre" />
                     <label for="apellido" class="field-label-4">Apellido</label>
@@ -680,7 +680,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </div>
   
   
-                  <form id="email-form" action="enviar.php"  method="post" class="form">
+                  <form id="email-form" data-netlify="true" onSubmit="submit" name="containers"  method="post" class="form">
                     <label for="nombre" class="field-label-4">Nombre</label>
                         <input type="text" class="w-input" maxlength="256" name="Nombre"  id="Nombre" />
                     <label for="apellido" class="field-label-4">Apellido</label>
