--- a/logistics/contenedores/index.html
+++ b/logistics/contenedores/index.html
@@ -610,7 +610,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
             
 
             <div class="form-block-2 w-form">
-                <form data-netlify="true" onSubmit="submit" name="containers"  method="post" class="form-2">
+                <form data-netlify="true" onSubmit="submit" name="containers"  method="post" class="form-2" action="../index.html">
                     <div class="form-group">
                       <label for="name1">Nombre</label>
                       <input type="text" class="form-control" id="name1" name="Nombre">
